# LBTCSU

./: CMakeLists.txt  README.md  Resources.qrc  VotingDB.db  VotingDB.sqbpro  candidates.cpp  candidates.h  candidates.ui  castedvotes.cpp  castedvotes.h  castedvotes.ui  castvote.cpp  castvote.h  castvote.ui  dashboard.cpp  dashboard.h  dashboard.ui  main.cpp  mainwindow.cpp  mainwindow.h  mydb.cpp  registercandidate.cpp  registercandidate.h  registercandidate.ui  registervoter.cpp  registervoter.h  registervoter.ui  useraddmin.cpp  useraddmin.h  viewresults.cpp  viewresults.h  viewresults.ui  voterdashboard.cpp  voterdashboard.h  voterdashboard.ui  voterdashboard.ui.autosave  voterrecords.cpp  voterrecords.h  voterrecords.ui  voters.cpp  (+2 more)
.qtcreator/: CMakeLists.txt.user.9a077b1
images/: Images.qrc
